--- a/jour2/integration.ipynb
+++ b/jour2/integration.ipynb
@@ -71,6 +71,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "def rect_gauche(f, a, b, n):\n",
+        "    h = (b-a)/n\n",
+        "    I = 0\n",
+        "    for i in range(n):\n",
+        "        xi = a + i * h\n",
+        "        I+= f(xi)\n",
+        "    return h*I\n",
+        "def rect_droite(f, a, b, n):\n",
+        "    h = (b-a)/n\n",
+        "    I = 0\n",
+        "    for i in range(n):\n",
+        "        xi = a + (i+1) * h\n",
+        "        I+= f(xi)\n",
+        "    return h*I\n",
+        "def rect_milieu(f, a, b, n):\n",
+        "    h = (b-a)/n\n",
+        "    I = 0\n",
+        "    for i in range(n):\n",
+        "        xi = a + (i+0.5) * h\n",
+        "        I+= f(xi)\n",
+        "    return h*I\n",
+        "def f(x):\n",
+        "    return 3*x**2*np.exp(x**3)\n",
+        "def F(x):\n",
+        "    return np.exp(x**3) - 1\n",
+        "I_exacte = F(1) - F(0)\n",
+        "erreur_g = I_exacte - rect_gauche(f, 0, 1, 100)\n",
+        "erreur_d = I_exacte - rect_droite(f, 0, 1, 100)\n",
+        "erreur_m = I_exacte - rect_milieu(f, 0, 1, 100)\n",
+        "print(\"Meth Gauche : E = {}\\nMeth droite : E = {} \\nMeth Milieu : E = {}\".format(erreur_g, erreur_d, erreur_m))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KD5Z_vJPuOJh",
+        "outputId": "9c8935ae-d9fa-4313-819f-f461426578ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "KD5Z_vJPuOJh",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meth Gauche : E = 0.04043446428115183\n",
+            "Meth droite : E = -0.04111399057261966 \n",
+            "Meth Milieu : E = 0.0001698732921089352\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "bb9d5b45-f691-4a25-8b03-b5279366f42e",
       "metadata": {
@@ -170,6 +228,20 @@
         "\n",
         "avec $x_i = a + ih$\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def trapeze(f, a, b, n):\n",
+        "    ....\n",
+        "    return h*I"
+      ],
+      "metadata": {
+        "id": "lc-lR_ne52Hr"
+      },
+      "id": "lc-lR_ne52Hr",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
