--- a/jour2/integration.ipynb
+++ b/jour2/integration.ipynb
@@ -109,13 +109,13 @@
       ],
       "metadata": {
         "id": "KD5Z_vJPuOJh",
-        "outputId": "9c8935ae-d9fa-4313-819f-f461426578ad",
+        "outputId": "72ec20b3-b2d1-4639-d2d6-63091012c1fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "KD5Z_vJPuOJh",
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,15 +233,34 @@
       "cell_type": "code",
       "source": [
         "def trapeze(f, a, b, n):\n",
-        "    ....\n",
-        "    return h*I"
+        "    h = (b - a)/n\n",
+        "    I = 0.5*(f(a)+ f(b))\n",
+        "    for i in range(1, n):\n",
+        "        xi = a + i *h\n",
+        "        I+= f(xi)\n",
+        "    return h*I\n",
+        "erreur_m = I_exacte - rect_milieu(f, 0, 1, 50)\n",
+        "erreur_t = I_exacte - trapeze(f, 0, 1, 50)\n",
+        "print(erreur_m, erreur_t)"
       ],
       "metadata": {
-        "id": "lc-lR_ne52Hr"
+        "id": "lc-lR_ne52Hr",
+        "outputId": "7d7c77f0-a77b-4094-9cb2-3cd5770ee275",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "lc-lR_ne52Hr",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.000679261451830282 -0.0013587877432978956\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
